[Qt] Fail gracefully if an OpenGL context could not be created. https://bugs.webkit.org/show_bug.cgi?id=113784

In case we fail to create or adopt a valid platform OpenGL context
we do not want to provide a GraphicsContext3D instance.
Otherwise we would crash as soon as the instance is being used.

Reviewed by Jocelyn Turcotte.

* platform/graphics/qt/GraphicsContext3DQt.cpp:
(WebCore::GraphicsContext3DPrivate::GraphicsContext3DPrivate):
(WebCore::GraphicsContext3D::GraphicsContext3D):

Canonical link: https://commits.webkit.org/132221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147553 268f45cc-cd09-0410-ab3c-d52691b4dbfc